flatpak: Fix loading flatpakref files

Drop assumptions of flatpak id being the same as the appstream id.

BUG: 464206


(cherry picked from commit 5bbba428263d5f249c97448b5ab5c88e1f77133a)